Documentação Swagger para todos os modelos
